--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
-p{
-	color:rgb(18, 18, 19);
-	font-family:Helvetica;	
+@media(min-width:768px){
+    .columnContainer{
+        display:flex;
+        }
 }
 
-body{
-	background:lightblue;
+.contact{
+border:1px black solid;
+padding:20px;
 }
+.overview{
+    border:1px black solid;
+    padding:20px
+}
+.skills{
+    border:1px black solid;
+    padding:20px
+}
+.experience{
+    border:1px black solid;
+    padding:20px
+}
+.education{
+    border:1px black solid;
+    padding:20px
+}
+body{
+    color:black;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: aliceblue;
+    }
