--- a/style.css
+++ b/style.css
@@ -1,31 +1,22 @@
-@media(min-width:768px){
-    .columnContainer{
-        display:flex;
-        }
-}
-
-.contact{
-border:1px black solid;
-padding:20px;
-}
-.overview{
-    border:1px black solid;
-    padding:20px
-}
-.skills{
-    border:1px black solid;
-    padding:20px
-}
-.experience{
-    border:10px black solid;
-    padding:20px
-}
-.education{
-    border:1px black solid;
-    padding:20px
-}
 body{
-    color:black;
-    font-family:Arial, Helvetica, sans-serif;
-    background-color: aliceblue;
+    background-color: rgba(255, 255, 255, 0.327);
+    text-align: center;
+    color: black;
+    margin-bottom: 200px
     }
+    
+    .show{
+    background-color: rgb(206, 228, 240);
+    border:1px rgb(104, 128, 170) solid;
+    padding: 20px;
+    }
+    
+    .row{
+    margin-top: 100px;
+    min-height: 100px;
+    justify-content: space-between;
+    }
+    p, h4, h5, ul{
+        text-align: left;
+    }
+    
